examples/type_system/failing/158_match_tuple_guarded_only_non_exhaustive.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/158_match_tuple_guarded_only_non_exhaustive.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/158_match_tuple_guarded_only_non_exhaustive.flx:26:14
//    |
// 26 |     let _x = match t {
//    |              ^^^^^^^^^
// 27 |         (a, b) if a > 0 && b -> 1,
//    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
// 28 |     }
//    | ^^^^^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015

fn main() -> Unit {
    let t = (1, true)
    let _x = match t {
        (a, b) if a > 0 && b -> 1,
    }
}
